panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__test_assign_through_ptr_ref_of_deref.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_assign_through_ptr_ref_of_deref.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition x~1 `int` 42)
         (definition p~2 `ptr<int>` (addressof (name x~1 `int`)))
         (expression (assign (deref (addressof (deref (name p~2 `ptr<int>`)))) 27))
         (return (name x~1 `int`)))))

----- stderr -----
