panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__test_ptr_equality.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/test_ptr_equality.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition p1~1 `ptr<long>` ∅)
         (definition b~2 `unsigned long long` 42)
         (definition p2~3 `ptr<long>` (add (name b~2 `unsigned long long`) (name p1~1 `ptr<long>`)))
         (definition p3~4 `ptr<long>` (subtract (name p2~3 `ptr<long>`) (name b~2 `unsigned long long`)))
         (return (equal (name p3~4 `ptr<long>`) (name p1~1 `ptr<long>`))))))

----- stderr -----
